--- a/home-page.html
+++ b/home-page.html
@@ -71,7 +71,7 @@
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="./POS/index.html" class="shadow plus-sign">+</a>
+                  <a href="./pos.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="#" class="shadow plus-sign">+</a>
+                  <a href="./manage.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
@@ -141,7 +141,7 @@
               </div>
               <div class="row px-3 mb-3 mb-sm-4">
                 <div class="col text-right">
-                  <a href="#" class="shadow plus-sign">+</a>
+                  <a href="./index.html" class="shadow plus-sign">+</a>
                 </div>
               </div>
             </div>
