--- a/pos.html
+++ b/pos.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 <!--  B O O T S T R A P  +  CSS  -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./assets/css/styles.css">
 <!--  W E B   F O N T S  -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
@@ -18,135 +18,116 @@
 </head>
 <body>
 <!--NAV BAR-->
-    <div class="nav-bar-wrapper container-md-fluid shadow-sm sticky-top bg-white">
-        <div class="row justify-content-between w-100 align-items-center">
-            <div class="logo-area pl-4 col-6 col-md-5">
-              <a href="#">
-                <h1 class="text-danger font-weight-bold m-0">LOGO</h1>
-              </a>
-            </div>
-
-            <nav class="navbar navbar-expand-md navbar-light col-6 col-md-2 justify-content-end">
-              <div class="row w-100 justify-content-end justify-content-md-around">
-                <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
-                    <span><img src="./assets/navbar-logo/list.png" alt="" class="dropdown-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse col-12" id="collapse_target">
-                    <ul class="navbar-nav row w-100  m-0 justify-content-around">
-                        <li class="nav-item dropdown">
-                            <a href="#" class="nav-link navigation-link dropdown-toggle text-dark font-weight-bold"  data-toggle="dropdown" data-target="dropdown_target">
-                                <span><img class="rounded-circle navbar-items-logo" src="./assets/navbar-logo/profile-user.png" alt=""></span>
-                                Admin
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown_target">
-                                <a href="#" class="dropdown-item">Dashboard</a>
-                                <a href="#" class="dropdown-item">Change password</a>
-                                <div class="dropdown-divider"></div>
-                                <a href="#" class="dropdown-item">Logout</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-              </div>
-             </nav>
+<div class="container-fluid p-0 sticky-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-white shadow-sm py-2 py-md-0 justify-content-md-around">
+        <div class="col-6 col-md-4">
+        <a class="navbar-brand text-danger font-weight-bold" href="./home-page.html">LOGO</a>
         </div>
-    </div>
-
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end p-0 col-6 col-md-4" id="navbarNavDropdown">
+          <ul class="navbar-nav p-0 align-items-center">
+            <li class="nav-item dropdown">
+                    <img src="./assets/Images/navbar-logo/profile-user.png" alt="admin-img" class="d-inline img-fluid navbar-link-logo">
+                    <a class="nav-link d-inline dropdown-toggle font-weight-bold text-dark" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Admin
+                    </a>
+              <div class="dropdown-menu p-0 mt-md-2" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item px-3 active" href="#">Dashboard</a>
+                <a class="dropdown-item px-3" href="#">Change Password</a>
+                <a class="dropdown-item px-3" href="#">Logout</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+    </nav>
+</div>
 <!--POS-->
-<div class="main py-4">
+<div class="main py-4 pr-2 bg--lavender">
   <div class="container-sm-fluid pb-5 pb-sm-5 pb-md-5 px-3">
     <div class="row">
         <div class="col-md-7 p-0">
             <div class="order-menu px-3">
                 <div class="row justify-content-center py-1">
                     <form class="form-row w-100" action="POST">
-                        <div class="col-md-6">
+                        <div class="col-md-12">
                             <div class="input-group">
                                 <div class="input-group-prepend">
-                                  <button class="btn search-icon rounded-0" type="button"><span><i class="fas fa-search"></i></span></button>
+                                  <button class="btn search-icon rounded-0 bg-danger shadow-none" type="button"><span><i class="fas text-white fa-search"></i></span></button>
                                 </div>
-                                <input type="text" class="form-control search-area bg-white rounded-0" placeholder="Search by name, group" aria-label="" aria-describedby="basic-addon1">
+                                <input type="text" class="form-control search-area bg-white shadow-none rounded-0" placeholder="Search by name, group" aria-label="" aria-describedby="basic-addon1">
                               </div>
                         </div>
-                        <div class="col-md-3 m-md-0 my-2">
+                        <!-- <div class="col-md-3 m-md-0 my-2">
                             <button type="button" class="seagreen-color btn btn-block rounded-0">SETTLED</button>
                         </div>
                         <div class="col-md-3 m-md-0">
                             <button type="button" class="tomato-color btn btn-block rounded-0">SUBMITTED</button>
-                        </div>
+                        </div> -->
                     </form>
                 </div>
                 <div class="row">
                     <div class="col-sm-3 px-1 pt-1 pb-3 order-menu-scrollbar">
-                        <button type="submit" class="btn active-order-menu-btn btn-block rounded-0 py-2">
+                        <button type="submit" class="btn shadow-none bg--seagreen text-white font-weight-bold btn-block rounded-0 py-2">
                             DINE IN
                         </button>
-                        <button type="submit" class="btn active-order-menu-btn btn-block rounded-0 py-2 mb-4">
+                        <button type="submit" class="btn shadow-none bg--seagreen text-white font-weight-bold btn-block rounded-0 py-2 mb-4">
                             TAKE AWAY
                         </button>
-                        <button type="submit" class="btn order-menu-side-btns btn-block btn-outline-danger rounded-0 py-2">
+                        <button type="submit" class="btn font-weight-bold shadow-none btn-block btn-outline-danger bg--white">
                             BURGER
                         </button>
-                        <button type="submit" class="btn order-menu-side-btns btn-block btn-outline-danger rounded-0 py-2">
+                        <button type="submit" class="btn font-weight-bold shadow-none btn-block btn-outline-danger bg--white">
                             PIZZA
                         </button>
-                        <button type="submit" class="btn order-menu-side-btns btn-block btn-outline-danger rounded-0 py-2">
+                        <button type="submit" class="btn font-weight-bold shadow-none btn-block btn-outline-danger bg--white">
                             BURGER
                         </button>
-                        <button type="submit" class="btn order-menu-side-btns btn-block btn-outline-danger rounded-0 py-2">
+                        <button type="submit" class="btn font-weight-bold shadow-none btn-block btn-outline-danger bg--white">
                             PIZZA
                         </button>
-                        <button type="submit" class="btn order-menu-side-btns btn-block btn-outline-danger rounded-0 py-2">
+                        <button type="submit" class="btn font-weight-bold shadow-none btn-block btn-outline-danger bg--white">
                             BURGER
                         </button>
-                        <button type="submit" class="btn order-menu-side-btns btn-block btn-outline-danger rounded-0 py-2">
+                        <button type="submit" class="btn font-weight-bold shadow-none btn-block btn-outline-danger bg--white">
                             PIZZA
                         </button>
-                        <button type="submit" class="btn order-menu-side-btns btn-block btn-outline-danger rounded-0 py-2">
+                        <button type="submit" class="btn font-weight-bold shadow-none btn-block btn-outline-danger bg--white">
                             BURGER
-                        </button>
-                        <button type="submit" class="btn order-menu-side-btns btn-block btn-outline-danger rounded-0 py-2">
-                            PIZZA
-                        </button>
-                        <button type="submit" class="btn order-menu-side-btns btn-block btn-outline-danger rounded-0 py-2">
-                            BURGER
-                        </button>
-                        <button type="submit" class="btn order-menu-side-btns btn-block btn-outline-danger rounded-0 py-2">
-                            PIZZA
                         </button>
                     </div>
                     <div class="col-sm-5 pt-1 order-menu-scrollbar">
                         <div class="row">
                             <div class="col-sm-6 p-0 pb-2">
-                                <div class="card shadow-sm mx-1 rounded-0 white-color-no-border card-btn-transition image-transition">
-                                    <img class="card-img-top img-trans rounded-0 img-fluid" src="./assets/Order-menu-cards/burger.jpg" alt="Card image cap">
-                                    <button type="button" class="btn rounded-0 text-center py-3 px-2 order-menu-card-link">CLASSIC CHICKEN BURGER</button>
+                                <div class="card shadow-sm mx-1 rounded-0 white-color-no-border image-transition">
+                                    <img class="card-img-top img-trans rounded-0 img-fluid" src="./assets/Images/Order-menu-cards/burger.jpg" alt="Card image cap">
+                                    <button type="button" class="btn rounded-0 text-center py-5 py-sm-3 px-2 focused--link font-weight-bold">CLASSIC CHICKEN BURGER</button>
                                 </div>
                             </div>
                             <div class="col-sm-6 p-0 pb-2">
-                                <div class="card shadow-sm mx-1 rounded-0 white-color-no-border card-btn-transition image-transition">
-                                    <img class="card-img-top img-trans rounded-0 img-fluid" src="./assets/Order-menu-cards/burger.jpg" alt="Card image cap">
-                                    <button type="button" class="btn rounded-0 text-center py-3 px-2 order-menu-card-link">CLASSIC CHICKEN BURGER</button>
+                                <div class="card shadow-sm mx-1 rounded-0 white-color-no-border image-transition">
+                                    <img class="card-img-top img-trans rounded-0 img-fluid" src="./assets/Images/Order-menu-cards/burger.jpg" alt="Card image cap">
+                                    <button type="button" class="btn rounded-0 text-center py-5 py-sm-3 px-2 focused--link font-weight-bold">CLASSIC CHICKEN BURGER</button>
                                 </div>
                             </div>
                             <div class="col-sm-6 p-0 pb-2">
-                                <div class="card shadow-sm mx-1 rounded-0 white-color-no-border card-btn-transition image-transition">
-                                    <img class="card-img-top img-trans rounded-0 img-fluid" src="./assets/Order-menu-cards/burger.jpg" alt="Card image cap">
-                                    <button type="button" class="btn rounded-0 text-center py-3 px-2 order-menu-card-link">CLASSIC CHICKEN BURGER</button>
+                                <div class="card shadow-sm mx-1 rounded-0 white-color-no-border image-transition">
+                                    <img class="card-img-top img-trans rounded-0 img-fluid" src="./assets/Images/Order-menu-cards/burger.jpg" alt="Card image cap">
+                                    <button type="button" class="btn rounded-0 text-center py-5 py-sm-3 px-2 focused--link font-weight-bold">CLASSIC CHICKEN BURGER</button>
                                 </div>
                             </div>
                             <div class="col-sm-6 p-0 pb-2">
-                                <div class="card shadow-sm mx-1 rounded-0 white-color-no-border card-btn-transition image-transition">
-                                    <img class="card-img-top img-trans rounded-0 img-fluid" src="./assets/Order-menu-cards/burger.jpg" alt="Card image cap">
-                                    <button type="button" class="btn rounded-0 text-center py-3 px-2 order-menu-card-link">CLASSIC CHICKEN BURGER</button>
+                                <div class="card shadow-sm mx-1 rounded-0 white-color-no-border image-transition">
+                                    <img class="card-img-top img-trans rounded-0 img-fluid" src="./assets/Images/Order-menu-cards/burger.jpg" alt="Card image cap">
+                                    <button type="button" class="btn rounded-0 text-center py-5 py-sm-3 px-2 focused--link font-weight-bold">CLASSIC CHICKEN BURGER</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4 pt-1 px-3 order-menu-scrollbar">
-                        <div class="row bg-white">
-                            <div class="col-md-12 p-2">
+                        <div class="row">
+                            <div class="col-md-12 p-2 bg-white">
                                 <h4 class="bg-danger text-center text-white p-2 m-0">Variations</h4>
                                 <div class="table-responsive">
                                     <table class="table table-bordered table-sm">
@@ -195,23 +176,23 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-2 px-4 py-1 d-flex flex-column justify-content-between">
-            <div class="form-group m-0">
-                <select id="inputState" class="form-control">
+        <div class="col-md-2 px-4 py-1 d-sm-flex bg-danger flex-column justify-content-between">
+            <div class="form-group mb-4">
+                <select id="inputState" class="form-control rounded-0 shadow-none">
                   <option selected>Select Branch</option>
                   <option>RYK Branch</option>
                 </select>
               </div>
               <div class="row">
                   <div class="col-12 mb-2">
-                      <button type="submit" class="btn btn-block rounded-0 btn-outline-danger font-weight-bold">PRINT BILL</button>
+                      <button type="submit" class="btn btn-block shadow-none bg--white rounded-0 btn-outline-danger font-weight-bold">PRINT BILL</button>
                   </div>
                   <div class="col-12">
-                      <button type="submit" class="btn btn-block rounded-0 btn-danger font-weight-bold">CANCEL</button>
+                      <button type="submit" class="btn btn-block shadow-none rounded-0 btn-danger font-weight-bold">CANCEL</button>
                   </div>
               </div>
         </div>
-        <div class="col-md-3 p-2 bg-white">
+        <div class="col-md-3 p-2 mt-2 mt-sm-1 bg-white">
             <div class="row">
                 <div class="col-12 m-0">
                     <h5 class="font-weight-bold py-2">ORDER TOKEN:</h5>
@@ -235,7 +216,7 @@
                     </table>
                 </div>
                 <div class="col-12">
-                    <p class="order-token-text py-md-5 text-center">
+                    <p class="font-weight-bold text-danger py-md-5 text-center">
                             SELECT FOOD ITEM TO ADD TO THE LIST
                     </p>
                 </div>
@@ -252,12 +233,12 @@
                             <tr>
                                 <td>
                                     <form class="input-group input-group-sm">
-                                    <input class="form-control" type="text" placeholder="Service Charges">
+                                    <input class="form-control shadow-none" type="text" placeholder="Service Charges">
                                     </form>
                                 </td>
                                 <td>
                                     <form class="input-group input-group-sm">
-                                    <input class="form-control" type="text" placeholder="Discount">
+                                    <input class="form-control shadow-none" type="text" placeholder="Discount">
                                     </form>
                                 </td>
                             </tr>
@@ -269,13 +250,13 @@
                         <h5 class="m-0">$0.00</h5>
                     </div>
                 </div>
-                <div class="col-12 mt-3">
-                    <div class="row px-1 justify-content-end">
-                        <div class="col-4">
-                            <button class="btn btn-block w-100 tomato-color rounded-0">SETTLE</button>
+                <div class="col-12 mt-3 px-4">
+                    <div class="row">
+                        <div class="col-6">
+                            <button class="btn btn-block w-100 shadow-none bg--tomato text-white rounded-0">SETTLE</button>
                         </div>
-                        <div class="col-4">
-                            <button class="btn btn-block w-100 seagreen-color rounded-0">SUBMIT</button>
+                        <div class="col-6">
+                            <button class="btn btn-block w-100 shadow-none bg--seagreen text-white rounded-0">SUBMIT</button>
                         </div>
                     </div>
                 </div>
